Adds some CSS styles

--- a/src/container/header/header.css
+++ b/src/container/header/header.css
@@ -1,6 +1,6 @@
 .news__header {
     width: 80%;
-    height: 80vh;
+    height: auto;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr;
